@@ -627,8 +627,13 @@ zoomHandleEvent (CompDisplay *d,
 		    event->xmotion.x_root > s->width  - 50 ||
 		    event->xmotion.y_root > s->height - 50)
 		{
+		    XEvent ev;
+
 		    zs->prevPointerX = s->width / 2;
 		    zs->prevPointerY = s->height / 2;
+
+		    XSync (d->display, FALSE);
+		    while (XCheckTypedEvent (d->display, MotionNotify, &ev));
 
 		    XWarpPointer (d->display, None, s->root, 0, 0, 0, 0,
 				  zs->prevPointerX, zs->prevPointerY);
