@@ -1,5 +1,9 @@
 2006-03-02  David Reveman  <davidr@novell.com>
 
+	* plugins/rotate.c (rotateHandleEvent):
+	* plugins/zoom.c (zoomHandleEvent): Make sure no pending motion
+	notify events exists when warping the pointer.
+
 	* plugins/rotate.c (rotateHandleEvent): Reset movement.
 
 	* plugins/switcher.c: Always send activate request when selecting a
